--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
       <form id="contactForm" action="dashboard.html" method="get">
         <div class="row two">
           <div>
-            <label for="name">Full Name</label>
-            <input id="name" name="name" type="text" placeholder="Jane Doe" />
+            <label for="name">Full Name*</label>
+            <input id="name" name="name" type="text" placeholder="Jane Doe" required/>
           </div>
           <div>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="jane@example.com" />
+            <label for="email">Email*</label>
+            <input id="email" name="email" type="email" placeholder="jane@example.com" required/>
           </div>
         </div>
 
-        <label for="address">Address</label>
-        <input id="address" name="address" type="text" placeholder="123 Main St, City, State" />
+        <label for="address">Address*</label>
+        <input id="address" name="address" type="text" placeholder="123 Main St, City, State" required/>
 
         <label for="message">Message</label>
         <textarea id="message" name="message" placeholder="How can we help?"></textarea>
